--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1 class="xyz">ALEXA RAY</h1>
         <p class="xyz">121 main street,Los angeles CA 9273636</p>
-        <b>ipsum dolor sit amet, consectetur adipisicing elit. Enim, exercitationem perferendis recusandae id voluptatibus cupiditate, corrupti iusto quos consectetur omnis expedita culpa numquam architecto nesciunt vero! Sunt quidem iste mollitia voluptate minus veritatis aliquam? Officiis ab, reprehenderit ipsa dolorum hic totam molestiae ipsam debitis necessitatibus architecto, quod optio voluptatum deleniti</b>
+        <b class="xyz">ipsum dolor sit amet, consectetur adipisicing elit. Enim, exercitationem perferendis recusandae id voluptatibus cupiditate, corrupti iusto quos consectetur omnis expedita culpa numquam architecto nesciunt vero! Sunt quidem iste mollitia voluptate minus veritatis aliquam? Officiis ab, reprehenderit ipsa dolorum hic totam molestiae ipsam debitis necessitatibus architecto, quod optio voluptatum deleniti</b>
         <hr>
         <h2 class="abc">PROFESSIONAL EXPERIENCE</h2>
         <p><strong>COMPANY A,LOS ANGELES,CA</strong></p>
